<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	
	<modelVersion>4.0.0</modelVersion>
	<name>New Gooru (GWT Version)</name>
	<groupId>org.ednovo.gooru</groupId>
	<artifactId>ROOT</artifactId>
	<packaging>war</packaging>
	<version>1.0-SNAPSHOT</version>
	<properties>
		<env>qa</env>
		<!-- Spring properties -->
		<org.springframework.version>3.1.2.RELEASE</org.springframework.version>
		<org.springframework.security.version>3.1.1.RELEASE</org.springframework.security.version>
		<!-- collection player version -->
		<player.collection.version>SNAPSHOT-5.11.3</player.collection.version>
		 <!-- resource player versions -->
		<player.resource.version>SNAPSHOT-5.11.2</player.resource.version>			
		<!-- Convenience property to set the GWT version -->
		<gwtVersion>2.5.0</gwtVersion>
		<!-- <project.build.directory>/home/rajam/pandoraspace</project.build.directory> 
			<project.build.finalName>/beta</project.build.finalName> -->
		<!-- GWT needs at least java 1.6 -->
		<maven.compiler.source>1.6</maven.compiler.source>
		<maven.compiler.target>1.6</maven.compiler.target>

		<!-- Don't let your Mac use a crazy non-standard encoding -->
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<project.build.finalName>ROOT</project.build.finalName>
		<!-- This is the webapp container to which the WARs are deployed to -->
		<webapp.container.home>${env.CATALINA_HOME}</webapp.container.home>
		<webappDirectory>${project.build.directory}/${project.build.finalName}</webappDirectory>
	</properties>
	  <repositories>
	    <repository>
	      <id>sonatype-snapshots</id>
	      <url>http://oss.sonatype.org/content/repositories/snapshots</url>
	      <snapshots><enabled>true</enabled></snapshots>
	      <releases><enabled>false</enabled></releases>
	    </repository>
	    <!-- Repository for gquery plugins -->
    <repository>
      <id>gwtquery-plugins</id>
      <url>http://gwtquery-plugins.googlecode.com/svn/mavenrepo</url>
    </repository>
	  </repositories>
	<dependencies>

		<!-- Spring dependencies -->

		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-expression</artifactId>
			<version>${org.springframework.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-tx</artifactId>
			<version>${org.springframework.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-aspects</artifactId>
			<version>${org.springframework.version}</version>
			<type>jar</type>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-webmvc</artifactId>
			<version>${org.springframework.version}</version>
			<type>jar</type>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-asm</artifactId>
			<version>${org.springframework.version}</version>
			<type>jar</type>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-core</artifactId>
			<version>${org.springframework.version}</version>
			<type>jar</type>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-beans</artifactId>
			<version>${org.springframework.version}</version>
			<type>jar</type>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-aop</artifactId>
			<version>${org.springframework.version}</version>
			<type>jar</type>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context</artifactId>
			<version>${org.springframework.version}</version>
			<type>jar</type>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-aspects</artifactId>
			<version>${org.springframework.version}</version>
			<type>jar</type>
			<scope>compile</scope>
		</dependency>
		<!--Restlet Form Problem -->
		<!-- <dependency>
			<groupId>org.restlet.jee</groupId>
			<artifactId>org.restlet</artifactId>
			<version>2.0.14</version>
		</dependency> -->
		<!--Restlet Form problem rectified -->
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-web</artifactId>
			<version>${org.springframework.version}</version>
			<type>jar</type>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-config</artifactId>
			<version>${org.springframework.security.version}</version>
			<type>jar</type>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-core</artifactId>
			<version>${org.springframework.security.version}</version>
			<type>jar</type>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-taglibs</artifactId>
			<version>${org.springframework.security.version}</version>
			<type>jar</type>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-web</artifactId>
			<version>${org.springframework.security.version}</version>
			<type>jar</type>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.aspectj</groupId>
			<artifactId>aspectjweaver</artifactId>
			<version>1.7.0</version>
		</dependency>

		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-annotations</artifactId>
			<version>2.1.0</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-core</artifactId>
			<version>2.1.0</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>2.1.0</version>
		</dependency>

		<!-- Google Web Toolkit (GWT) -->

		<dependency>
			<groupId>com.google.gwt</groupId>
			<artifactId>gwt-user</artifactId>
			<version>${gwtVersion}</version>
		</dependency>
		<dependency>
			<groupId>com.google.gwt</groupId>
			<artifactId>gwt-incubator</artifactId>
			<version>2.0.1</version>
		</dependency>
		<dependency>
			<groupId>com.allen-sauer.gwt.dnd</groupId>
			<artifactId>gwt-dnd</artifactId>
			<version>3.2.0</version>
		</dependency>
		<dependency>
			<groupId>com.google.gwt.inject</groupId>
			<artifactId>gin</artifactId>
			<version>2.0.0</version>
		</dependency>
		<dependency>
			<groupId>com.google.inject</groupId>
			<artifactId>guice</artifactId>
			<version>3.0</version>
		</dependency>
		<dependency>
			<groupId>com.google.code.gwt-dnd</groupId>
			<artifactId>gwt-dnd</artifactId>
			<version>2.5.6</version>
		</dependency>
		<dependency>
			<groupId>com.gwtplatform</groupId>
			<artifactId>gwtp-mvp-client</artifactId>
			<version>0.7</version>
			<exclusions>
				<exclusion>
					<groupId>org.springframework</groupId>
					<artifactId>spring-core</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.springframework</groupId>
					<artifactId>spring-context</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.springframework</groupId>
					<artifactId>spring-beans</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.springframework</groupId>
					<artifactId>spring-web</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<!-- Required by Hibernate validator because slf4j-log4j is optional in 
			the hibernate-validator POM -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>1.6.1</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.6.1</version>
		</dependency>
		<dependency>
			<groupId>com.google.gwt</groupId>
			<artifactId>gwt-servlet</artifactId>
			<version>2.5.0</version>
		</dependency>
		<dependency>
			<groupId>org.restlet.jse</groupId>
			<artifactId>org.restlet</artifactId>
			<version>2.1-M6</version>
			<type>pom</type>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.restlet.jse</groupId>
			<artifactId>org.restlet</artifactId>
			<version>2.1-M6</version>
		</dependency>
		<dependency>
			<groupId>org.restlet.jse</groupId>
			<artifactId>org.restlet.ext.simple</artifactId>
			<version>2.1-M6</version>
		</dependency>
		<dependency>
			<groupId>org.restlet.jse</groupId>
			<artifactId>org.restlet.ext.json</artifactId>
			<version>2.1-M6</version>
		</dependency>
		<dependency>
			<groupId>org.restlet.jse</groupId>
			<artifactId>org.restlet.ext.ssl</artifactId>
			<version>2.1-M6</version>
		</dependency>
			<dependency>
			<groupId>org.restlet.jse</groupId>
			<artifactId>org.restlet.ext.net</artifactId>
			<version>2.1-M6</version>
		</dependency>
			<dependency>
			<groupId>org.restlet.jse</groupId>
			<artifactId>org.restlet.ext.html</artifactId>
			<version>2.1-M6</version>
		</dependency>
		<dependency>
			<groupId>commons-lang</groupId>
			<artifactId>commons-lang</artifactId>
			<version>2.6</version>
		</dependency>
		<dependency>
			<groupId>org.google</groupId>
			<artifactId>gwt-traction</artifactId>
			<version>1.5.2</version>
		</dependency>
		<dependency>
			<groupId>org.gooru.resource.player</groupId>
			<artifactId>gooru.resource.player</artifactId>
			<version>${player.resource.version}</version>	
		</dependency>
		<dependency>
			<groupId>com.bramosystems.oss.player</groupId>
			<artifactId>bst-player-api</artifactId>
			<version>1.3</version>
		</dependency>
		<dependency>
			<groupId>org.json</groupId>
			<artifactId>json</artifactId>
			<version>20090211</version>
		</dependency>
		<dependency>
			<groupId>org.gooru.collection.player</groupId>
			<artifactId>gooru.collection.player</artifactId>
			<version>${player.collection.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpcore</artifactId>
			<version>4.2.2</version>
		</dependency>
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpcore</artifactId>
			<version>4.2.2</version>
		</dependency>
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpclient</artifactId>
			<version>4.2</version>
		</dependency>
		<dependency>
			<groupId>commons-collections</groupId>
			<artifactId>commons-collections</artifactId>
			<version>3.2.1</version>
		</dependency>
		<dependency>
			<groupId>commons-codec</groupId>
			<artifactId>commons-codec</artifactId>
			<version>1.6</version>
		</dependency>
		<dependency>
			<groupId>com.googlecode.gwt-cropper</groupId>
			<artifactId>gwt-crop</artifactId>
			<version>0.4.5</version>
		</dependency>
		<dependency>
            <groupId>com.google.code</groupId>
            <artifactId>GwtEarth3</artifactId>
            <version>1.0</version>
        </dependency>
		<dependency>
			<groupId>com.itextpdf</groupId>
			<artifactId>itextpdf</artifactId>
			<version>5.4.3</version>
		</dependency>
		<dependency>
			<groupId>code.google.com</groupId>
			<artifactId>gwt-print-it</artifactId>
			<version>1.13</version>
		</dependency>
		<dependency>
			<groupId>code.google.com</groupId>
			<artifactId>gwt-storage</artifactId>
			<version>1.0</version>
		</dependency>
		<dependency>
	        <groupId>com.googlecode.gwtupload</groupId>
	        <artifactId>gwtupload</artifactId>
	        <version>0.6.6</version>
    	</dependency>
		<dependency>
			<groupId>code.google.com</groupId>
			<artifactId>gwt-serialization</artifactId>
			<version>1.0</version>
		</dependency>
		<dependency>
	     <groupId>com.googlecode.gwtquery</groupId>
	     <artifactId>gwtquery</artifactId>
	     <!-- Check last available version in the downloads page -->
	     <version>1.4.0</version>
	     <!-- If you are using old versions of gwt, uncomment the appropriate line -->
	     <!-- <classifier>2.1.0</classifier> -->
	     <!-- <classifier>2.0.1</classifier> -->
	     <scope>provided</scope>
	   </dependency>
	   <dependency>
	            <groupId>highcharts.com</groupId>
	            <artifactId>gwt-highcharts</artifactId>
	            <version>1.0</version>
	    </dependency>
	   <dependency>
				<groupId>com.google.gwt.google-apis</groupId>
				<artifactId>gwt-visualization</artifactId>
				<version>1.0.2</version>
	   </dependency>
	 <dependency>
			<groupId>com.google.gwt.google-apis</groupId>
			<artifactId>gwt-ajaxloader</artifactId>
			<version>1.1.0</version>
			<exclusions>
			<exclusion>
					<artifactId>gwt-dev</artifactId>
					<groupId>com.google.gwt</groupId>
				</exclusion>
			</exclusions>
		</dependency>		
	</dependencies>
	<profiles>
		<profile>
			<id>dev</id>
			<properties>
				<env>dev</env>
			</properties>
		</profile>
		<profile>
			<id>concept</id>
			<properties>
				<env>concept</env>
			</properties>
		</profile>
		<profile>
			<id>devl</id>
			<properties>
				<env>devl</env>
			</properties>
		</profile>
		<profile>
			<id>prod</id>
			<properties>
				<env>prod</env>
			</properties>
		</profile>
		<profile>
			<id>local</id>
			<properties>
				<env>local</env>
			</properties>
		</profile>
		<profile>
			<id>qagenx</id>
			<properties>
				<env>qagenx</env>
			</properties>
		</profile>
		
	 <profile>
                        <id>qa</id>
                        <properties>
                                <env>qa</env>
                        </properties>
                </profile>
	<profile>
			<id>elbprod</id>
			<properties>
				<env>elbprod</env>
			</properties>
		</profile>

  <profile>
                        <id>www2</id>
                        <properties>
                                <env>www2</env>
                        </properties>
                </profile>
	</profiles>
	<build>
		<filters>
			<filter>build/filter-${env}.properties</filter>
		</filters>
		<finalName>${artifactId}</finalName>

		<!-- Generate compiled stuff in the folder used for developing mode -->
		<outputDirectory>${webappDirectory}/WEB-INF/classes</outputDirectory>
		<plugins>

			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.0</version>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
				</configuration>
			</plugin>

			<!-- GWT Maven Plugin -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>gwt-maven-plugin</artifactId>
				<!-- TODO: Update version to 2.5.0 once gwt-maven-plugin 2.5.0 final 
					is released (post-GWT 2.5.0) -->
				<version>2.5.0</version>
				<!-- JS is only needed in the package phase, this speeds up testing -->
				<executions>
					<execution>
						<phase>prepare-package</phase>
						<goals>
							<goal>compile</goal>
						</goals>
					</execution>
				</executions>

				<!-- Plugin configuration. There are many available options, see gwt-maven-plugin 
					documentation at codehaus.org -->
				<configuration>
					<!-- URL that should be automatically opened in the GWT shell (gwt:run). -->
					<runTarget>index.html</runTarget>
					<!-- Ask GWT to create the Story of Your Compile (SOYC) (gwt:compile) -->
					<compileReport>true</compileReport>
					<module>org.ednovo.gooru.Gooru</module>
					<hostedWebapp>${webappDirectory}</hostedWebapp>
					<logLevel>ERROR</logLevel>
					<style>${gwt.style}</style>
					<extraJvmArgs>-XX:MaxPermSize=1024m -Xmx4024m</extraJvmArgs>
					<copyWebapp>true</copyWebapp>
				</configuration>
				<dependencies>
					<!-- For the servlet filter -->
					<dependency>
						<groupId>javax.servlet</groupId>
						<artifactId>servlet-api</artifactId>
						<version>2.5</version>
					</dependency>
					<dependency>
						<groupId>com.google.gwt</groupId>
						<artifactId>gwt-dev</artifactId>
						<version>${gwtVersion}</version>
					</dependency>
				</dependencies>
			</plugin>

			<!-- Copy static web files before executing gwt:run -->
			<plugin>
				<artifactId>maven-resources-plugin</artifactId>
				<version>2.6</version>
				<executions>
					<execution>
						<id>copy-resources</id>
						<!-- here the phase you need -->
						<phase>validate</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>${basedir}/src/main/webapp</outputDirectory>
							<resources>
								<resource>
									<directory>src/main/resources</directory>
									<filtering>true</filtering>
								</resource>
							</resources>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
				<includes>
					<include>**/*.xml</include>
					<include>**/*.css</include>
					<include>**/*.html</include>
					<include>**/*.js</include>
					<include>**/*.</include>
					<include>**/*.properties</include>
				</includes>
			</resource>
		</resources>
	</build>
</project>